# sdm-clickhouse

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  biome.json  changelogithub.config.mjs  components.json  index.html  install.ps1  install.sh  knip.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.github/: dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
docs/: architecture.md  commands.md  release-checklist.md  release.md  v0.1.0-deliverables.md  v0.2-feature-execution-plan.md
plan/: 00-overview.md  01-phase-0-environment-bootstrap.md  02-phase-1-shell-and-connections.md  03-phase-2-schema-and-query.md  04-phase-3-edit-and-ddl.md  05-phase-4-release-and-hardening.md  06-execution-audit-2026-02-26.md  07-phase-5-schema-and-workspace-v2.md  08-phase-6-connection-security-and-team-readiness.md  09-phase-7-observability-performance-and-release-quality.md  10-phase-8-open-source-release-automation.md  v0.1.4-execution.md
scripts/: check-tauri.mjs  check-version-consistency.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clickhouse.rs  commands.rs  db.rs  lib.rs  models.rs
tests/: add-connection-dialog.spec.ts  app-shell.spec.ts  connection-action-timeout-recovery.spec.ts  connection-dialog-interaction.spec.ts  connection-dogfood-flow.spec.ts  dogfood-visual.spec.ts  ui-lock-recovery.spec.ts
(+53 files in other folders)
