[package]
name = "tauri-app"
version = "0.1.9"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
repository = "https://github.com/lord007tn/sdm-clickhouse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-process = "2"
